--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://omni-hack.herokuapp.com",
+  "homepage": ".",
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
